infra/konfig/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: konfig
  namespace: konfig-system
spec:
  selector:
    app: konfig
  ports:
    - name: grpc
      port: 50051
      targetPort: grpc
    - name: metrics
      port: 9090
      targetPort: metrics
  type: ClusterIP
